# mtronaut

./: .coverage  .gitignore  GEMINI.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
backend/mtronaut/: main.py  session.py  terminal.py  tools.py
docs/: agents.md  architecture.md  contributing.md  deployment-systemd.md  deployment.md  deployment_systemd.md  mtr-behavior.md  pty-terminal-research.md  tests.md  todo.md
frontend/: index.html
frontend/css/: notifications.css  status.css  styles.css
frontend/js/: main.js  notifications.js  terminal.js  tools.js  websocket.js
tests/: test_api.py  test_edge_cases.py  test_error_handling.py  test_initial.py  test_session_unit.py  test_sessions.py  test_terminal.py  test_tools.py  test_websocket.py
