[tool.poetry]
name = "mtronaut"
version = "0.1.0"
description = "A web-based network analysis tool streamer."
authors = ["Roo"]
packages = [{include = "mtronaut", from = "backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
websockets = "^12.0"
ptyprocess = "^0.7.0"
validators = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
pytest-cov = "^6.2.1"
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"